# metamemory

./: .gitignore  =1.3.0  README.md  S04-REGRESSION-RESULTS.md  S04-VISUAL-VERIFICATION.md  check_audio.py  checkpoint-hv-02-12.md  meetandread.spec  pyproject.toml  pytest.ini  requirements.txt  run.bat  test_transcription.py
.github/workflows/: release.yml  test.yml
.gsd.migrating/: CODEBASE.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  gsd.db  gsd.db-shm  gsd.db-wal  notifications.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: WIDGET-DEVIATIONS.md  WIDGET-TRACEABILITY.md
tests/: manual_integration_test.py  test_aetheric_settings_shell.py  test_audio_session.py  test_audio_source_selection.py  test_audio_storage.py  test_benchmark_accuracy.py  test_benchmark_model_selector.py  test_cc_overlay.py  test_cli_fake_duration.py  test_confidence.py  test_config.py  test_config_benchmark_history.py  test_error_help.py  test_hardware.py  test_hardware_warning.py  test_panel_resize.py  test_performance.py  test_recommender_models.py  test_recording_management.py  test_resource_warnings.py  test_settings_docking.py  test_settings_history.py  test_speaker_pipeline.py  test_speaker_reid_benchmark.py  test_speaker_signatures.py  test_streaming_integration.py  test_system_audio.py  test_theme.py  test_transcript_management.py  test_transcript_scanner.py  test_transcription_engine.py  test_transcription_pipeline.py  test_widget_docking.py  test_widget_requirements.py  test_widget_visual_state.py
(+222 files in other folders)
