[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetandread"
version = "0.1.0"
description = "Windows Desktop Audio Transcription Widget — zero information loss during conversations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Tergi"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

dependencies = [
    "PyQt6>=6.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soxr>=0.3.0",
    "comtypes>=1.2.0",
    "pyaudiowpatch>=0.2.12",
    "pywhispercpp>=1.3.0",
    "sherpa-onnx>=1.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
meetandread = "meetandread.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (requires model download, deselect with '-m \"not slow\"')",
]
